<resources>
    <string name="app_name">COVID-19 Statistics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">COVID-19 Statistics</string>
    <string name="nav_header_subtitle">Coronavirus</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_location_detail">Location Details</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_notifications">Allow Notifications?</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_about">About</string>

    <string name="home_second">Home Second</string>

    <string name="channel_name">COVID_STATISTICS_CHANNEL</string>
    <string name="channel_description">Notification channel for COVID Statistics notifications</string>

    <string name="arrow_content_description">arrow indicator</string>

    <!-- Location activity -->
    <string name="location_country">Select country</string>
    <string name="location_province">Select State/Province</string>
    <string name="location_municipality">Select Municipality</string>
    <string name="location_button">Add Location</string>

    <!-- Preferences -->
    <string name="prefs_receiveNotifications">RECEIVE_NOTIFICATIONS</string>

    <!-- Content Descriptions -->
    <string name="img_globe">Globe</string>
    <string name="img_trashcan">Delete</string>

    <!-- Placeholders -->
    <string name="number">x,xxx,xxx</string>

    <!-- Labels -->
    <string name="lbl_country">Select Country</string>
    <string name="lbl_province">Select State/Province</string>
    <string name="lbl_municipality">Select City/Municipality</string>
    <string name="lbl_add_location">Add Location</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_global">Global</string>
    <string name="lbl_confirmed">Confirmed:</string>
    <string name="lbl_deaths">Deaths:</string>
    <string name="lbl_recovered">Recovered:</string>
    <string name="lbl_active">Active:</string>
    <string name="lbl_fatality">Fatality Rate:</string>
    <string name="lbl_positivity">Positivity Rate:</string>
    <string name="lbl_seven_day_trend">7 day trend of new cases</string>
    <string name="lbl_hospitalizations">Hospitalizations:</string>
    <string name="lbl_icu">ICU:</string>
    <string name="lbl_infection">Infection Rate:</string>
    <string name="lbl_test_positivity">Test Positivity:</string>
    <string name="lbl_case_density">Case Density:</string>

    <string name="about_text">
        All data for this application is supplied by COVID-19 Statistics API
        (<a href="https://covid-api.com">https://covid-api.com/</a>) and COVID ActNow
        (<a href="https://covidactnow.org/">https://covidactnow.org</a>).
        Data from COVID-19 Statistics is sourced from COVID-19 Data Repository by the Center for Systems Science and Engineering
        (CSSE) at Johns Hopkins University (<a href="https://systems.jhu.edu/">https://systems.jhu.edu/</a>).
        Data from COVID ActNow is provided by Act Now Coalition, an independent 501(c)(3) nonprofit founded in March 2020.
        They build data and storytelling products that are accurate and actionable, so that everyone can make informed decisions
        during crises, whether COVID or climate change.
    </string>

    <string-array name="us_states">
        <item>|Alabama|AL</item>
        <item>|Alaska|AK</item>
        <item>|Arizona|AZ</item>
        <item>|Arkansas|AR</item>
        <item>|California|CA</item>
        <item>|Colorado|CO</item>
        <item>|Connecticut|CT</item>
        <item>|Delaware|DE</item>
        <item>|District of Columbia|DC</item>
        <item>|Florida|FL</item>
        <item>|Georgia|GA</item>
        <item>|Hawaii|HI</item>
        <item>|Idaho|ID</item>
        <item>|Illinois|IL</item>
        <item>|Indiana|IN</item>
        <item>|Iowa|IA</item>
        <item>|Kansas|KS</item>
        <item>|Kentucky|KY</item>
        <item>|Louisiana|LA</item>
        <item>|Maine|ME</item>
        <item>|Maryland|MD</item>
        <item>|Massachusetts|MA</item>
        <item>|Michigan|MI</item>
        <item>|Minnesota|MN</item>
        <item>|Mississippi|MS</item>
        <item>|Missouri|MO</item>
        <item>|Montana|MT</item>
        <item>|Nebraska|NE</item>
        <item>|Nevada|NV</item>
        <item>|New Hampshire|NH</item>
        <item>|New Jersey|NJ</item>
        <item>|New Mexico|NM</item>
        <item>|New York|NY</item>
        <item>|North Carolina|NC</item>
        <item>|North Dakota|ND</item>
        <item>|Ohio|OH</item>
        <item>|Oklahoma|OK</item>
        <item>|Oregon|OR</item>
        <item>|Pennsylvania|PA</item>
        <item>|Rhode Island|RI</item>
        <item>|South Carolina|SC</item>
        <item>|South Dakota|SD</item>
        <item>|Tennessee|TN</item>
        <item>|Texas|TX</item>
        <item>|Utah|UT</item>
        <item>|Vermont|VT</item>
        <item>|Virginia|VA</item>
        <item>|Washington|WA</item>
        <item>|West Virginia|WV</item>
        <item>|Wisconsin|WI</item>
        <item>|Wyoming|WY</item>
    </string-array>

    <string-array name="location_retrieve_complete">
        <item>Beep Bop Boop Computing|Beep Bop Boop Complete!</item>
        <item>Generating awesome-sauce|New awesome-sauce added to list!</item>
        <item>We\'re workin\' We\'re workin\' We\'re workin\'|Workin\' complete!</item>
        <item>Techno-wizardry in process, please stand by|Wizardry complete!</item>
        <item>I wonder how long it takes to get stats|About that long :)</item>
        <item>Caf-Pow ingestion starting|Processing complete!</item>
        <item>Better make some popcorn, this one may take a while|Just kidding, all done!</item>
    </string-array>
</resources>
