<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/menu_locations" />
        <item
            android:id="@+id/app_bar_switch"
            android:title="@string/menu_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="always" />
    </group>
</menu>
