<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.chakfrost.covidstatistics.ui.statistics.StatisticsFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_statistics">


    </fragment>
<!--    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.chakfrost.covidstatistics.ui.statistics.HomeSecondFragment"
        android:label="@string/menu_stats"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>-->

    <fragment
        android:id="@+id/nav_locations"
        android:name="com.chakfrost.covidstatistics.ui.locations.LocationFragment"
        android:label="@string/menu_locations"
        tools:layout="@layout/fragment_locations" />


    <fragment
        android:id="@+id/nav_about"
        android:name="com.chakfrost.covidstatistics.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/about_fragment" />
</navigation>