<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LocationAdd">

    <Spinner
        android:id="@+id/location_spMunicipalities"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_txtMunicipalities" />

    <TextView
        android:id="@+id/location_txtMunicipalities"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/location_municipality"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_spProvinces" />

    <Spinner
        android:id="@+id/location_spProvinces"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_txtProvinces" />

    <TextView
        android:id="@+id/location_txtProvinces"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/location_province"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_spCountries" />

    <TextView
        android:id="@+id/location_txtCountries"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/location_country"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/location_spCountries"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_txtCountries" />

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/location_spMunicipalities">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/location_btnAdd"
            android:layout_width="wrap_content"
            android:text="Add Location"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Material"
            android:textColor="@color/white"
            android:clickable="false"
            android:layout_marginRight="4dp"
            app:layout_constraintEnd_toStartOf="@+id/back_to_main"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="parent"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_to_main"
            android:layout_width="wrap_content"
            android:text="Cancel"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Material"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginLeft="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/location_btnAdd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="parent"/>
<!--        <Button
            android:id="@+id/location_btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/location_button"
            app:layout_constraintEnd_toStartOf="@+id/back_to_main"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="parent" />
        <Button
            android:id="@+id/back_to_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/location_btnAdd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>


    <include layout="@layout/progress_bar"/>
</androidx.constraintlayout.widget.ConstraintLayout>